# viewlyt

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  how-to.md  pyproject.toml  xray.md
src/viewlyt/: __init__.py  api.py  cli.py  clipboard.py  driver.py  htmltext.py  rag.py  scraper.py  split.py  tokens.py  vl.py  watch.py
src/viewlyt/live/: __init__.py  capture.py  cli.py  llm.py  messages.py  persistence.py  probes.py  server.py  window.py
src/viewlyt/live/dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/viewlyt/live/dashboard/src/: main.ts  style.css
src/viewlyt/live/static/: index.html
src/viewlyt/live/static/assets/: index--tu3Ynox.css  index-1cxn33G2.css  index-2bC7mW-z.js  index-4ALq50vi.css  index-4Yyr4vH_.css  index-B3PLdDAJ.js  index-B4ZGfY-h.js  index-B6bNGZXQ.css  index-B7xqXtss.js  index-BBwmeiCk.css  index-BD_RYDAy.js  index-BFcLlf3t.css  index-BHxdYEwT.css  index-BJX4yzyJ.css  index-BMmZlk6U.js  index-BMoQjLnH.css  index-BNIrF9DK.js  index-BNjEuLPq.js  index-BRhpWs-n.js  index-BSHS-Tm8.css  index-BVt55flS.css  index-BfjMEGRN.js  index-BmHvDcZA.js  index-Bq8qzDbD.js  index-Bqy0PgjN.css  index-BumPVluI.css  index-BvT8Ec3w.js  index-By-9JuxD.js  index-C5wsnVwV.css  index-C7tzJ7bD.js  index-C93LkdrG.js  index-C9pKvkYr.js  index-CAWRr1m9.js  index-CByTmlcl.js  index-CClyA_Jy.js  index-CD6ZbQni.js  index-CHL0a3lU.css  index-CKxtIpn6.js  index-CLAoebO_.css  index-CMv5Z_gs.js  (+40 more)
src/ytcomments/: __init__.py  cli.py  driver.py  scraper.py
tests/: conftest.py  test_e2e.py  test_integration.py  test_live_capture.py  test_live_clean.py  test_live_e2e.py  test_live_integration.py  test_live_persistence.py  test_live_rewrite.py  test_live_security.py  test_live_server.py  test_live_smoke.py  test_live_units.py  test_live_ws.py  test_rag.py  test_smoke.py  test_tokens.py  test_units.py
