[project]
name = "viewlyt"
version = "0.1.0"
description = "CLI tool and typed Python library to collect a YouTube video's transcript, comments and related videos as LLM-ready Markdown (Selenium), with opt-in live-chat and RAG chat modes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lucas Hideki", email = "lucas.hideki.07@gmail.com" },
]
keywords = [
    "youtube",
    "youtube-comments",
    "youtube-transcript",
    "transcript",
    "comments",
    "scraper",
    "selenium",
    "cli",
    "library",
    "markdown",
    "llm",
    "rag",
    "live-chat",
    "uv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "selenium>=4.21",
    "tqdm>=4.66.3",  # >=4.66.3 clears CVE-2024-34062 (we use only the progress API)
]

[project.optional-dependencies]
live = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "openai>=1.30", "cryptography>=42"]
# Ephemeral chat over collected out/*.md (the default `vl ask` engine): LLM on OpenRouter.
ask = ["openai>=1.30"]
# Persistent LightRAG knowledge-graph index (`vl ask --persist`) + local fastembed embeddings.
rag = ["lightrag-hku>=1.4", "openai>=1.30", "fastembed>=0.3"]

[project.urls]
Homepage = "https://github.com/LkHideki/viewlyt"
Repository = "https://github.com/LkHideki/viewlyt"
Issues = "https://github.com/LkHideki/viewlyt/issues"

[project.scripts]
vl = "viewlyt.vl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewlyt"]
exclude = ["src/viewlyt/live/dashboard/node_modules", "src/viewlyt/live/dashboard/dist"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pre-commit>=3.7",
]
# Browser e2e for the live dashboard (WebKit = Safari's engine). Opt-in:
#   uv sync --extra live --group e2e && uv run playwright install webkit
#   VIEWLYT_E2E=1 uv run pytest -m e2e
e2e = [
    "playwright>=1.45",
]

[tool.ruff]
line-length = 100
extend-exclude = ["out", "out_test"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length is handled by the formatter; don't flag long strings

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "e2e: real browser + network; opt-in via VIEWLYT_E2E=1 (skipped by default)",
]
